--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
 <body>
    
    <h1 id="first">naglowek1</h1>
+   <h2 id="second">Naglowek2</h2>
+   <h3>Trzeci naglowek</h3>
+   <p id="paragraf">Pargraf pierwszy</p>
+   <div>
+   <p id="paragraf">Pargraf drugi</p>
+   </div>
+    <p id="paragraf-next">Pargraf next</p>
    
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-     <script src="js/js.js"></script>
+     <script src="js/selektory.js"></script>
     
 </body>
 </html>
