--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p id="paragraf-next">Pargraf next</p>
    
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-     <script src="js/selektory.js"></script>
+     <script src="js/manipulacjadom.js"></script>
     
 </body>
 </html>
